setting up heap size